image and banner added

--- a/asad.html
+++ b/asad.html
@@ -16,9 +16,20 @@
             <ul>
                 <li><a href="#">portfolio</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><button>Hire Me</button></li>
+                <li><button class="btn">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+           <div class="banner-left">
+            <h2>Hello I'm</h2>
+            <h1>SHAFIUL HASAN</h1>
+            <p>Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).</p>
+            <button class="btn">Download CV</button>
+            <button class="btn">Contact</button>
+           </div>
+           <img src="asad.png.png" alt="image " width="400px">
+
+        </div>
     </header>
     <main>
 
