about section added

--- a/asad.html
+++ b/asad.html
@@ -27,12 +27,34 @@
             <button class="btn">Download CV</button>
             <button class="btn">Contact</button>
            </div>
-           <img src="asad.png.png" alt="image " width="400px">
+           <img src="asad.png.png" alt="image " width="">
 
         </div>
     </header>
+    <!--main tag is starting -->
     <main>
-
+        <section class="about">
+          <h1>About Me</h1>
+          <p>I am a  Student. I read in feni polytechnic institute. Now i am in 5th semester. I read in Computer Science and Technology Department. Now i do a course. </p>
+          <div class="abfoot">
+            <div class="f1">
+                 <h3>Name</h3>
+                 <p><b>Shafiul Hasan</b></p>
+            </div>
+            <div class="f2">
+                <h3>Email</h3>
+                <p><b>shafiul1426@gmail.com</b></p>
+            </div>
+            <div class="f3">
+                <h3>Date of Birth</h3>
+                <p><b>5 june,2004</b></p>
+            </div>
+            <div class="f4">
+                <h3>From</h3>
+                <p><b>feni,Chattogram,Bangladesh</b></p>
+            </div>
+          </div>
+        </section>
     </main>
     <footer>
 
