--- a/asad.html
+++ b/asad.html
@@ -55,6 +55,80 @@
             </div>
           </div>
         </section>
+        <section class="work">
+            <h1>What I do</h1>
+            <p>If you’re often overwhelmed by your day-to-day schedule, spare time might feel like a foreign concept. This guide will explore how setting aside time for yourself can make you happier and more fulfilled, along with suggestions for things to do with your free time.</p>
+        </section>
+        <section class="skill">
+            <div class="prg">
+                <img src="image/js.png"
+                width="50px" alt="javascript image">
+                <h3>Vanilla Javascript</h3>
+                <p>JavaScript (JS) is a lightweight interpreted (or just-in-time compiled) programming language with first-class functions. While it is most well-known as the scripting language for Web pages, many non-browser environments also use it, such as Node.js, Apache CouchDB and Adobe Acrobat.</p>
+            </div>
+            <div class="prg">
+                <img src="image/react.png" width="50px" alt="react image">
+                <h3>React</h3>
+                <p>React is also an architecture. Frameworks that implement it let you fetch data in asynchronous components that run on the server or even during the build. Read data from a file or a database, and pass it down to your interactive components.</p>
+            </div>
+            <div class="prg">
+                <img src="image/nodejs.png" width="50px" alt="Node.js image">
+                <h3>Node.js</h3>
+                <p>Node.js is a cross-platform, open-source JavaScript runtime environment that can run on Windows, Linux, Unix, macOS, and more. Node.js runs on the V8 JavaScript engine, and executes JavaScript code outside a web browser.</p>
+            </div>
+            <div class="prg">
+                <img src="image/mongodb.png" width="50px" alt="MongoDB image">
+                <h3>MongoDB</h3>
+                <p>MongoDB is a source-available, cross-platform, document-oriented database program. Classified as a NoSQL database product, MongoDB utilizes JSON-like documents with optional schemas. MongoDB is developed by MongoDB Inc.</p>
+            </div>
+        </section>
+        <section class="info">
+            <h1>A summary of my resume</h1>
+            <div class="infoa">
+                <div class="infoa1">
+                      <h2>My Education</h2>
+                      <div class="dv">
+                        <h3>Diploma in Computer engineering</h3>
+                        <h4>Feni Polytechnic Institute</h4>
+                        <p>Feni Polytechnic Institute was established on February 29th, 1964. It is located 500 meters east of Feni Sadar Hospital. Dhaka-Chittagong highway near the old road in a 15.97-acre campus of Civil and Mechanical Engineering Department started in Feni.</p>
+                      </div>
+                      <div class="dv">
+                        <h3>Diploma in Computer engineering</h3>
+                        <h4>Feni Polytechnic Institute</h4>
+                        <p>Feni Polytechnic Institute was established on February 29th, 1964. It is located 500 meters east of Feni Sadar Hospital. Dhaka-Chittagong highway near the old road in a 15.97-acre campus of Civil and Mechanical Engineering Department started in Feni.</p>
+                      </div>
+                      <div class="dv">
+                        <h3>Diploma in Computer engineering</h3>
+                        <h4>Feni Polytechnic Institute</h4>
+                        <p>Feni Polytechnic Institute was established on February 29th, 1964. It is located 500 meters east of Feni Sadar Hospital. Dhaka-Chittagong highway near the old road in a 15.97-acre campus of Civil and Mechanical Engineering Department started in Feni.</p>
+                      </div>
+                      
+
+                </div>
+                <div class="infoa1">
+                       <h2>My Experience</h2>
+                       <div class="dv">
+                        <h3>Diploma in Computer engineering</h3>
+                        <h4>Feni Polytechnic Institute</h4>
+                        <p>Feni Polytechnic Institute was established on February 29th, 1964. It is located 500 meters east of Feni Sadar Hospital. Dhaka-Chittagong highway near the old road in a 15.97-acre campus of Civil and Mechanical Engineering Department started in Feni.</p>
+                      </div>
+                      <div class="dv">
+                        <h3>Diploma in Computer engineering</h3>
+                        <h4>Feni Polytechnic Institute</h4>
+                        <p>Feni Polytechnic Institute was established on February 29th, 1964. It is located 500 meters east of Feni Sadar Hospital. Dhaka-Chittagong highway near the old road in a 15.97-acre campus of Civil and Mechanical Engineering Department started in Feni.</p>
+                      </div>
+                      <div class="dv">
+                        <h3>Diploma in Computer engineering</h3>
+                        <h4>Feni Polytechnic Institute</h4>
+                        <p>Feni Polytechnic Institute was established on February 29th, 1964. It is located 500 meters east of Feni Sadar Hospital. Dhaka-Chittagong highway near the old road in a 15.97-acre campus of Civil and Mechanical Engineering Department started in Feni.</p>
+                      </div>
+
+                </div>
+            </div><br>
+            <button class="btn">DOWNLOAD CV</button>
+        </section>
+        <br><br>
+      
     </main>
     <footer>
 
