--- a/asad.html
+++ b/asad.html
@@ -131,7 +131,29 @@
       
     </main>
     <footer>
-
+          <div class="fleft">
+            <h1>Lets Connect</h1>
+            <p>please fill out the form on this section to contact with me or call between 9.00 am to 8.00 pm(Monday to Friday)</p>
+            <div class="img">
+                <img src="image/fb.png"
+                width="40px" alt="">
+                <img src="image/insta.png"
+                width="40px" alt="">
+                <img src="image/twitter.png"
+                width="40px" alt="">
+            </div>
+          </div>
+          <div class="form">
+            <h1>Let's Message me</h1>
+            <br>
+            <input type="text" placeholder="your name">
+            <br><br>
+            <input type="email" placeholder="your email">
+            <br><br>
+            <textarea name="comment" id="cc" cols="30" rows="10" placeholder="Message"></textarea>
+            <br><br>
+            <input type="submit" value="Submit" class="btn">
+          </div>
     </footer>
 </body>
 </html>
