--- a/asad.html
+++ b/asad.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="asad.css">
+    <script src="https://kit.fontawesome.com/8280d9cb0b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -24,8 +25,8 @@
             <h2>Hello I'm</h2>
             <h1>SHAFIUL HASAN</h1>
             <p>Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).</p>
-            <button class="btn">Download CV</button>
-            <button class="btn">Contact</button>
+            <button class="btn"><i class="fa-solid fa-download"></i>Download CV</button>
+            <button class="btn"><i class="fa-solid fa-phone"></i>Contact</button>
            </div>
            <img src="asad.png.png" alt="image " width="">
 
@@ -125,7 +126,7 @@
 
                 </div>
             </div><br>
-            <button class="btn">DOWNLOAD CV</button>
+            <button class="btn"><i class="fa-solid fa-download"></i>DOWNLOAD CV</button>
         </section>
         <br><br>
       
@@ -135,12 +136,12 @@
             <h1>Lets Connect</h1>
             <p>please fill out the form on this section to contact with me or call between 9.00 am to 8.00 pm(Monday to Friday)</p>
             <div class="img">
-                <img src="image/fb.png"
-                width="40px" alt="">
-                <img src="image/insta.png"
-                width="40px" alt="">
-                <img src="image/twitter.png"
-                width="40px" alt="">
+                <a href="#"><img src="image/fb.png"
+                    width="40px" alt=""></a>
+                <a href="#"><img src="image/insta.png"
+                    width="40px" alt=""></a>
+               <a href="#"> <img src="image/twitter.png"
+                width="40px" alt=""></a>
             </div>
           </div>
           <div class="form">
