responsed for mobile

--- a/asad.html
+++ b/asad.html
@@ -28,7 +28,7 @@
             <button class="btn"><i class="fa-solid fa-download"></i>Download CV</button>
             <button class="btn"><i class="fa-solid fa-phone"></i>Contact</button>
            </div>
-           <img src="asad.png.png" alt="image " width="">
+           <img class="asd" src="asad.png.png" alt="image " width="">
 
         </div>
     </header>
